[gd_scene load_steps=26 format=2]

[ext_resource path="res://assets/Enemies/Bat.png" type="Texture" id=1]
[ext_resource path="res://assets/Effects/EnemyDeathEffect.png" type="Texture" id=2]
[ext_resource path="res://src/Actors/Bat.gd" type="Script" id=3]
[ext_resource path="res://src/Actors/HitEffects.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/Shadows/SmallShadow.png" type="Texture" id=5]
[ext_resource path="res://src/Actors/PlayerDetector.tscn" type="PackedScene" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "fly",
"speed": 8.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "died",
"speed": 15.0
} ]

[sub_resource type="CapsuleShape2D" id=17]
radius = 2.43974
height = 4.86571

[sub_resource type="CircleShape2D" id=18]
radius = 8.41734

[sub_resource type="CircleShape2D" id=19]
radius = 4.34794

[node name="Bat" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -16.3452 )
frames = SubResource( 16 )
animation = "fly"
frame = 4

[node name="ShadowSprite" type="Sprite" parent="."]
texture = ExtResource( 5 )

[node name="HitEffects" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 17 )

[node name="BodyShape" type="Area2D" parent="."]
position = Vector2( 0, -15.761 )
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BodyShape"]
position = Vector2( 0, -3.76926 )
shape = SubResource( 18 )

[node name="PlayerDetector" parent="." instance=ExtResource( 6 )]

[node name="Hitbox" type="Area2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, -18.2181 )
shape = SubResource( 19 )
[connection signal="area_entered" from="BodyShape" to="." method="_on_BodyShape_area_entered"]
